...
    
    private var ctaButtons: some View {
        VStack(spacing: 8) {
            Text("Get Started")
                .callToActionButton()
                .lineLimit(1)
                .accessibilityIdentifier("StartButton")
                .frame(maxWidth: 500)
                .anyButton {
                    presenter.onGetStartedPressed()
                }
            
            Text("Already have an account? Sign in.")
...
